cadre class width to percent instead of fixed for better presentation on mobiles

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .cadre {
     padding: 30px;
-    width: 700px;
+    width: 70%;
     border-radius: 10px;
     /* border: 1px solid purple; */
     margin: 50px auto;
